--- a/style.css
+++ b/style.css
@@ -3,7 +3,18 @@
     background-size: cover;
 }
 #DotaLogo{
-    max-width: 650px;
+    display: flex;
+    justify-content: center;
+    height: auto;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.logo{
+    height: auto;
+    width: 100%;
+    max-height: 206px;
+    max-width: 352px;
 }
 h1, h2, h3, h4, h5, h6 {
     padding: 1%;
@@ -11,6 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 body {
     color: #999999;
+    background-color: #0a0a0a;
 }
 *{
     font-family: 'Raleway';
@@ -31,9 +43,29 @@ body {
 #fullInfoContainer{
     width: 50%;
 }
+#myFooter{
+    background-color: #0a0a0a;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
+    overflow: hidden;
+    height: 334px;
+    background-image:url('http://cdn.dota2.com/apps/dota2/images/blog/play/bg_10.jpg');
+}
 @media (max-width: 768px){
+    #threeBlocks .cfr{
+        background-color: rgba(255,255,255,0.6);
+    }
+    #threeBlocks .cfl{
+        background-color: rgba(0,0,0,0.8);;
+    }
     #threeBlocks .row{
         height: 100%;
+    }
+    #threeBlocks .col-xl-4{
+        padding: 0;
     }
     #fullInfoContainer{
         width: 100%;
@@ -50,6 +82,11 @@ body {
     }
     #threeBlocks p{
         width: 100%;
+    }
+}
+@media (max-width: 400px){
+    #DotaLogo{
+        display: block;
     }
 }
 @media (max-width: 300px){
